--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-	<title>JS Experiments</title>
+	<title>THREE.js Baseline</title>
+	<style>
+		body{ background-color: #000; width: 100%; height: 100%; margin: 0px; padding: 0px; }
+	</style>
 </head>
 <body>
 </body>
