--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,25 @@
 	<title>THREE.js Baseline</title>
 	<style>
 		body{ background-color: #000; width: 100%; height: 100%; margin: 0px; padding: 0px; }
+		#overlay {
+			z-index: 1000;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			color: white;
+			font-family: sans-serif;
+		}
+		.hud {
+			margin: 4px;
+			font-size: 8pt;
+		}
 	</style>
 </head>
 <body>
+	<div id="overlay">
+		<div class="hud">Use W/S to move towards mouse cursor</div>
+	</div>
 </body>
 </html>
