sortof working jump, collision shape is not quite right.

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,16 @@
 			font-family: sans-serif;
 		}
 		.hud {
-			margin: 4px;
+			position: absolute;
+			bottom: 4px;
+			left: 4px;
 			font-size: 8pt;
 		}
 	</style>
 </head>
 <body>
 	<div id="overlay">
-		<div class="hud">Use W/S to move towards mouse cursor</div>
+		<div class="hud">W/S walk toward cursor. Q drops cube, Shift to run, Space to jump</div>
 	</div>
 </body>
 </html>
