updated to simpler test controls

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div id="overlay">
-		<div class="hud">W/S walk toward cursor. Q drops cube, Shift to run, Space to jump</div>
+		<div class="hud">Q or <button id="dropCube">DROP</button> drops cube, Shift to run, Click to jump</div>
 	</div>
 </body>
 </html>
