--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 	<title>THREE.js Baseline</title>
+	<meta name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, 
+     user-scalable=0' >
 	<style>
 		body{ background-color: #000; width: 100%; height: 100%; margin: 0px; padding: 0px; }
 		#overlay {
@@ -15,15 +18,15 @@
 		}
 		.hud {
 			position: absolute;
-			bottom: 4px;
+			bottom: 10px;
 			width: 100%;
 			font-size: 8pt;
 			text-align: center;
 			margin: auto;
 		}
 		.hud button {
-			padding: 10px;
-			margin-right: 20px;
+			padding: 20px;
+			margin-right: 30px;
 			font-size: 14pt;
 			background-color: #333;
 			color: #fff;
